# doc_checker

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CLAUDE.md  QUICKSTART_LLM.md  README.md  TESTS_SUMMARY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/doc_checker/: __init__.py  checkers.py  cli.py  code_analyzer.py  constants.py  formatters.py  link_checker.py  llm_backends.py  llm_checker.py  models.py  parsers.py  prompts.py
src/doc_checker/checkers_folder/: api_coverage.py  base.py  doc_params.py  docstrings_links.py  external_links.py  local_links.py  nav_paths.py  quality.py  references.py
src/doc_checker/utils/: code_analyzer.py  link_checker.py
tests/: __init__.py  conftest.py  test_checkers.py  test_code_analyzer.py  test_external_links.py  test_integration.py  test_link_checker.py  test_llm_backends.py  test_llm_checker.py  test_parsers.py  test_prompts.py
