[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-checker"
version = "0.1.0"
description = "Check documentation: broken links and undocumented code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8"]
llm = ["ollama>=0.1.0"]
llm-openai = ["openai>=1.0.0"]
llm-all = ["ollama>=0.1.0", "openai>=1.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-PyYAML>=6.0",
    "aiohttp>=3.8",
]

[project.scripts]
doc-checker = "doc_checker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ollama", "ollama.*", "openai", "openai.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
